finish project gosporty

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_NAME=gosporty
 JWT_SECRET=my_super_secret_key_123
 JWT_EXPIRE=24h
 CLIENT_URL=http://localhost:3000
-REACT_APP_API_URL=https://gosporty.onrender.com
+REACT_APP_API_URL=http://localhost:10000
