--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
     "react-router-dom": "^7.9.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.31.0",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^12.0.2",
     "web-vitals": "^2.1.4"
   },
-"scripts": {
-  "start": "react-scripts start",
-  "build": "cross-env CI=false react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "vercel-build": "npm run build"
-},
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "cross-env CI=false react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "vercel-build": "npm run build"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
